--- a/WebContent/web/css/index2.css
+++ b/WebContent/web/css/index2.css
@@ -13,6 +13,11 @@ body {
 	font-size: 14px; 
 }
 
+.dialog-content {
+	position: absolute; 
+	width: 100%; 
+	height: 99.5%;
+}
 
 /*表格页面css*/
 
@@ -21,7 +26,8 @@ body {
 }
 
 .mycontainer-title {
-	margin: 10px 0;
+	padding: 10px 0;
+	border-bottom: 2px solid #E9E9E9;
 }
 
 .mycontainer-title-icon {
@@ -30,6 +36,7 @@ body {
 }
 
 .mycontainer-title-text {
+	font-size: 16px;
 	color: #E37682;
 }
 
@@ -80,6 +87,41 @@ table .unable-a {
 	cursor: pointer;
 }
 
+
+/*表单css*/
+.form-title {
+	margin: 8px 0;
+}
+
+.form-title-icon {
+	margin-left: 10px;
+	color: red;
+	font-size: 12px;
+}
+
+.form-title-text {
+	color: #000;
+}
+
+.form-table {
+	width: 100%;
+}
+
+.form-table td {
+	height: 35px;
+}
+
+.form-input {
+	height: 24px;
+	line-height: 24px;
+}
+
+.mycontainer-title-return {
+	float: right;
+	padding-right: 10px;
+}
+
+
 /*dataTable修改css*/
 .tbb .dataTables_info {
 	float: left;
@@ -91,13 +133,54 @@ table .unable-a {
     margin-left: 20px;
 }
 
+/*bootstrap修改*/
+.myhr {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 
 /*宽度集合*/
 .width200 {
 	width: 200px;
 }
 
+.wper60 {
+	width: 60%;
+}
+
+.wper80 {
+	width: 80%;
+}
+
+.wper81 {
+	width: 81%;
+}
+
 /*margin集合*/
+.mgl7 {
+	margin-left: 7px;
+}
+
 .mgl20 {
 	margin-left: 20px;
+}
+
+/*vertical-align集合*/
+.vertop {
+	vertical-align: top;
+}
+
+/*color集合*/
+.red {
+	color: red;
+}
+
+/*float*/
+.fl {
+	float: left;
+}
+
+.fr {
+	float: right;
 }
